[gd_scene load_steps=8 format=3 uid="uid://b0cjoaquis6w0"]

[ext_resource type="StyleBox" uid="uid://ccy5itrfe006x" path="res://Scenes/UI/panel.tres" id="1_cpboj"]
[ext_resource type="Script" path="res://Scenes/manager/level_manager.gd" id="1_cswss"]
[ext_resource type="FontFile" uid="uid://dlqiino7nti1b" path="res://assets/font/Rockboxcond12.ttf" id="2_yxlk4"]

[sub_resource type="Animation" id="Animation_q755q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_44sty"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5f7qn"]
_data = {
"RESET": SubResource("Animation_q755q"),
"show": SubResource("Animation_44sty")
}

[sub_resource type="LabelSettings" id="LabelSettings_f5o62"]
font = ExtResource("2_yxlk4")
font_size = 60
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 7
shadow_color = Color(0, 0, 0, 0.6)
shadow_offset = Vector2(2, 2)

[node name="LevelManager" type="Node"]
process_mode = 3
script = ExtResource("1_cswss")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinuePanel" type="PanelContainer" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(600, 170)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -190.0
offset_right = 300.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_cpboj")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ContinuePanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="RichTextLabel" parent="CanvasLayer/Control/ContinuePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/normal_font = ExtResource("2_yxlk4")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "You have to kill all enemy and survive!"
visible_characters = 0
visible_ratio = 0.0

[node name="ContinueButton" type="Button" parent="CanvasLayer/Control/ContinuePanel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.972549, 0.282353, 0.282353, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_yxlk4")
theme_override_font_sizes/font_size = 30
text = "Continue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/ContinuePanel/VBoxContainer"]
libraries = {
"": SubResource("AnimationLibrary_5f7qn")
}

[node name="WinPanel" type="PanelContainer" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -75.0
offset_right = 200.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_cpboj")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/WinPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="WinLabel" type="Label" parent="CanvasLayer/Control/WinPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "You Win!"
label_settings = SubResource("LabelSettings_f5o62")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinButton" type="Button" parent="CanvasLayer/Control/WinPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.972549, 0.282353, 0.282353, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_yxlk4")
theme_override_font_sizes/font_size = 30
text = "Next Level
"

[node name="LossPanel" type="PanelContainer" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -75.0
offset_right = 200.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_cpboj")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/LossPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LossLabel" type="Label" parent="CanvasLayer/Control/LossPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "You Lost!"
label_settings = SubResource("LabelSettings_f5o62")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LossButton" type="Button" parent="CanvasLayer/Control/LossPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.972549, 0.282353, 0.282353, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_yxlk4")
theme_override_font_sizes/font_size = 30
text = "Back Menu"

[node name="Timer" type="Timer" parent="."]
one_shot = true
